--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,12 @@ keywords = ["tock", "embedded", "registers", "mmio", "bare-metal"]
 categories = ["data-structures", "embedded", "no-std"]
 license = "MIT/Apache-2.0"
 edition = "2021"
+rust-version.workspace = true
+
+[workspace.package]
+# This must be kept in sync with rust-toolchain.toml; please see that file for
+# more information.
+rust-version = "1.85"
 
 [features]
 default = [ "register_types" ]
