--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ readme = "README.md"
 keywords = ["tock", "embedded", "registers", "mmio", "bare-metal"]
 categories = ["data-structures", "embedded", "no-std"]
 license = "MIT/Apache-2.0"
-edition = "2021"
+edition.workspace = true
 rust-version.workspace = true
 
 [workspace.package]
+edition = "2024"
 # This must be kept in sync with rust-toolchain.toml; please see that file for
 # more information.
 rust-version = "1.85"
